---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/loop_invariant/asserts_loop_nested.fail.move:37:5
   │
37 │     asserts(n <= 100 && (n == 0 || m <= 200));
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/loop_invariant/asserts_loop_nested.fail.move:36: nested_spec
